--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -205,21 +205,46 @@
         width: 100%;
     }
 
-    .advantages-list {
+    /*.advantages-list {*/
+        /*display: block;*/
+    /*}*/
+
+    /*.advantages-link {*/
+        /*align-items: center;*/
+        /*!*float: left;*!*/
+    /*}*/
+
+    /*.advantages-link h3 {*/
+        /*font-size: 18px;*/
+    /*}*/
+    .advantages-link{
+        display: block;
+        position: relative;
+        height: 40px;
+    }
+    .advantages-list{
         display: block;
     }
-
-    .advantages-link {
-        align-items: center;
-        /*float: left;*/
+    .advantages-link h3{
+        display: block;
+        /*height: 40px;*/
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 55px;
+        font-size: 17px;
     }
-
-    .advantages-link h3 {
-        font-size: 18px;
+    .advantages-link img{
+        width: 40px;
+        height: 40px;
+        float: left;
     }
 }
 
 @media (max-width: 425px) {
+    .container{
+        margin: 0 10px;
+    }
     .price-mikocin h2:nth-child(1) {
         font-size: 20px;
     }
@@ -227,4 +252,54 @@
     .price-mikocin h2:nth-child(2) {
         font-size: 20px;
     }
+    .slogan h1{
+        font-size: 30px;
+    }
+    .slogan h2 {
+        font-size: 25px;
+    }
+    .point-1 img, .point-2 img, .point-3 img{
+        width: 40px;
+    }
+    .point-1:before, .point-2:before, .point-3:before {
+        font-size: 15px;
+    }
+    @keyframes pulse {
+        0%{
+            width: 40px;
+            height: 40px;
+        }
+        100%{
+            width: 60px;
+            height: 60px;
+        }
+    }
+    .action-link h3{
+        font-size: 17px;
+        margin-left: 77px;
+    }
+    .main-content-slogan h1{
+        font-size: 35px;
+    }
+    .main-content-slogan h3 {
+        font-size: 20px;
+    }
+    .amputation{
+        margin: 20px 0;
+    }
+    .img-allergy span, .amputation span, .authorities span {
+        right: 25%;
+    }
+    .statistics{
+        margin: 30px 0 30px 0;
+    }
+    .statistics h2{
+        margin: 20px 5px 10px 5px;
+    }
+}
+@media (max-width: 320px) {
+    .img-allergy span, .amputation span, .authorities span {
+        right: 15%;
+    }
+
 }
